--- a/src/components/SkillsCard/index.css
+++ b/src/components/SkillsCard/index.css
@@ -7,6 +7,9 @@
 }
 .skill-container {
   display: flex;
+  margin:  10px;
+  align-items: center;
+  justify-content: center;
 }
 .skill-image {
   width: 60px;
